Update, delete animal